Ind. msg frmt 1

--- a/src/sm/rc_sm/test/CMakeLists.txt
+++ b/src/sm/rc_sm/test/CMakeLists.txt
@@ -140,6 +140,13 @@ elseif(SM_ENCODING_RC STREQUAL "ASN")
     ../ie/ir/e2sm_rc_ind_hdr_frmt_3.c
 
 
+    ../ie/ir/e2sm_rc_ind_msg_frmt_1.c
+    #../ie/ir/e2sm_rc_ind_msg_frmt_1.c
+    #../ie/ir/e2sm_rc_ind_msg_frmt_1.c
+    #../ie/ir/e2sm_rc_ind_msg_frmt_1.c
+    #../ie/ir/e2sm_rc_ind_msg_frmt_1.c
+    #../ie/ir/e2sm_rc_ind_msg_frmt_1.c
+
 
     ../ie/ir/param_report_def.c
 
