--- a/src/sm/kpm_sm_v02.03/test/CMakeLists.txt
+++ b/src/sm/kpm_sm_v02.03/test/CMakeLists.txt
@@ -18,18 +18,10 @@ if(CODE_COVERAGE)
 
 endif()
 
-add_executable(test_kpm_mir   
-  main.c 
-  fill_rnd_data_kpm.c 
-  # ${CMAKE_CURRENT_SOURCE_DIR}/../../../util/alg_ds/alg/defer.c
-  # ${CMAKE_CURRENT_SOURCE_DIR}/../../../util/byte_array.c
-  ${CMAKE_CURRENT_SOURCE_DIR}/../../../util/conversions.c
-  $<TARGET_OBJECTS:e2sm_kpm_asn1_obj> 
-  )
+add_executable(test_kpm_mir  main.c)
 
 target_link_libraries(test_kpm_mir PUBLIC 
-                            kpm_sm_static
-                            e2sm_common_ie_shared
+                            kpm_sm
                             -lm
                             )
 
