Added copy instructors for Action Definition; RIC Subscription message to be added within E2 Agent

--- a/src/sm/kpm_sm_v02.03/ie/kpm_data_ie/kpm_ric_info/CMakeLists.txt
+++ b/src/sm/kpm_sm_v02.03/ie/kpm_data_ie/kpm_ric_info/CMakeLists.txt
@@ -7,6 +7,7 @@ set(KPM_RIC_INFO_SRCS
   kpm_ric_action_def_frm_4.c
   kpm_ric_action_def_frm_5.c
   kpm_ric_event_trigger_def.c
+  kpm_ric_event_trigger_def_frm_1.c
   kpm_ric_ind_hdr.c
   kpm_ric_ind_hdr_frm_1.c
   kpm_ric_ind_msg.c
