Issues when adding RIC Subscription message in sm_agent_t; adding E2 Setup message in sm_ric_t

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -10,5 +10,17 @@ add_library(pending_events_obj OBJECT
                                 ind_event.c
                                 $<TARGET_OBJECTS:e2ap_types_obj> 
                                 $<TARGET_OBJECTS:e2ap_ap_obj>
+                                
+                                # ../sm/kpm_sm_v02.03/ie/kpm_data_ie.c
+                                # $<TARGET_OBJECTS:e2sm_kpm_asn1_obj>
+                                # $<TARGET_OBJECTS:kpm_ric_info_common_obj>
+                                # $<TARGET_OBJECTS:kpm_ric_info_obj>
+
+                                # $<TARGET_OBJECTS:kpm_dec_common_asn_obj>
+                                # $<TARGET_OBJECTS:kpm_dec_ie_asn_obj>
+
+                                # $<TARGET_OBJECTS:kpm_enc_common_asn_obj>
+                                # $<TARGET_OBJECTS:kpm_enc_ie_asn_obj>
                                 )
 
+# add_dependencies(pending_events_obj e2_agent)
