--- a/test/sm/CMakeLists.txt
+++ b/test/sm/CMakeLists.txt
@@ -5,5 +5,5 @@ add_subdirectory(slice_sm)
 add_subdirectory(tc_sm)
 add_subdirectory(gtp_sm)
 add_subdirectory(rc_sm)
-#add_subdirectory(kpm_sm)
+add_subdirectory(kpm_sm)
 enable_testing() 
