--- a/test/agent-ric-xapp/CMakeLists.txt
+++ b/test/agent-ric-xapp/CMakeLists.txt
@@ -1,8 +1,22 @@
 if(E2AP_ENCODING STREQUAL "ASN")
 add_executable(test_ag_ric_xapp 
                 test_ag_ric_xapp.c
-                ../sm/common/fill_ind_data.c
-                ../../src/sm/rc_sm/test/fill_rnd_data_rc.c
+                # ../sm/common/fill_ind_data.c
+                # ../../src/sm/rc_sm/test/fill_rnd_data_rc.c
+               
+                  ../../../test/rnd/fill_rnd_data_gtp.c                  
+                  ../../../test/rnd/fill_rnd_data_tc.c                  
+                  ../../../test/rnd/fill_rnd_data_mac.c                  
+                  ../../../test/rnd/fill_rnd_data_rlc.c                  
+                  ../../../test/rnd/fill_rnd_data_pdcp.c                  
+                  ../../../test/rnd/fill_rnd_data_kpm.c                  
+                  ../../../test/rnd/fill_rnd_data_rc.c                  
+                  ../../../test/rnd/fill_rnd_data_slice.c                  
+ 
+
+
+
+
                 ../../src/sm/mac_sm/ie/mac_data_ie.c
                 ../../src/sm/rlc_sm/ie/rlc_data_ie.c
                 ../../src/sm/pdcp_sm/ie/pdcp_data_ie.c
